# registry

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Makefile  README.md  Registry.Dockerfile  Registry.sln  decision_making_policy.md  docfx.json  global.json  makefile  renovate.json  toc.yaml
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml  release.yml  renovate-config.json  renovate.json
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml  adr.yml  bug_report.yml  config.yml  feature_request.yml  rfc-template.md  task.yml  task_list.yml
.github/workflows/: auto-release.yaml  concordium-integration-tests.yml  concordium-tests.yml  create-helm-release.yaml  create-release.yaml  docfx.yml  dotnet-formatting.yml  dotnet-unit-tests.yml  dotnet-unittests.yml  (+7 more)
chart/: Chart.yaml  README.md  run_kind_test.sh  run_migration_test.sh  run_migration_test_from_old.sh  run_parallel_test.sh  values.yaml
doc/: architecture.md  consistent-hash-ring.md  container.md  docfx.json  index.md  registry_service.md  registry_system.md  roadmap.md  toc.yml
docs/: index.rst
meeting_minutes/: implementer_day_18_01_2023.md  workshop_01_03_2023.md
protos/: electricity.proto  registry.proto
src/: .env  Directory.Build.props  Electricity.Server.Dockerfile  README.md  Registry.Dockerfile  Registry.sln  docker-compose-pg-only.yml
src/rust-ffi/: Cargo.toml  README.md
src/rust-ffi/src/: generator.rs  lib.rs  point.rs  rangeproof.rs  scalar.rs  transscript.rs  util.rs
(+850 files in other folders)
