[package]
name = "rust-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
rand = "0.8.5"
sha3 = "0.9"
